Добавлены настройки для ученика

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -37,6 +37,12 @@
         #student-popup a:hover {
             color: blue;
         }
+
+        .student-btn {
+            display:inline-block;
+            float:right;
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
