--- a/templates/student_popup.html
+++ b/templates/student_popup.html
@@ -5,7 +5,8 @@
    }
 </script>
 <div id="student-popup">
-    <h2>{{ name }} {{ surname }} {{ patronymic }}</h2>
+    <button class="student-btn" data-target="/">Настройки</button>
+    <h2>{{ name }} {{ surname }}</h2>
     <a href='/profile'>Профиль</a>
     <a href='/'>Меню</a>
     <a href='/'>Оплата питания</a>
