--- a/static/styles/auth.css
+++ b/static/styles/auth.css
@@ -1,3 +1,9 @@
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #auth-form {
     display: flex;
     flex-direction: column;
