настройки конфиденциальности в изменении профиля

--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Профиль</h1>
-    <h2>ФИО: {{ name }} {{ surname }} {{ patronymic }}</h2>
+    <h2>ФИО: {{ surname }} {{ name }} {{ patronymic }}</h2>
     <h2>Класс: {{ stud_class }}</h2>
     <h2>Логин: {{ login }}</h2>
     <h2>Мой баланс: {{ balance }}</h2>
