--- a/templates/macros/labeled_input.html
+++ b/templates/macros/labeled_input.html
@@ -1,6 +1,9 @@
-{% macro labeled_input(name='input', label='input', type='text', class='labeled_input', required=False) %}
+{% macro labeled_input(name='', label='input', type='text', value='', class='labeled-input', 
+        readonly=False, required=False) %}
     <div class="{{ class }}">
         <label for="{{ name }}">{{ label }}</label>
-        <input id="{{ name }}" name="{{ name }}" type="{{ type }}" placeholder="{{ label }}" {% if required %}required{% endif %}>
+        <input id="{{ name }}" name="{{ name }}" type="{{ type }}" value="{{ value }}" placeholder="{{ label }}"
+         {% if required %}required{% endif %}
+         {% if readonly %}readonly{% endif %}>
     </div>
 {% endmacro %}
