Изменено на allergies

--- a/templates/profile_edit.html
+++ b/templates/profile_edit.html
@@ -11,7 +11,7 @@
         <input name="login" value="{{ login }}" placeholder="Логин"><br>
 
         <label>Аллергии</label>
-        <input name="alergies" value="{{ alergies }}" placeholder="Аллергии"><br>
+        <input name="allergies" value="{{ allergies }}" placeholder="Аллергии"><br>
 
         <label>Предпочтения</label>
         <input name="preferences" value="{{ preferences }}" placeholder="Предпочтения"><br>
