--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -10,7 +10,7 @@
     <h2>Класс: {{ stud_class }}</h2>
     <h2>Логин: {{ login }}</h2>
     <h2>Мой баланс: {{ balance }}</h2>
-    <h2>Аллергия: {{ alergies }}</h2>
+    <h2>Аллергия: {{ allergies }}</h2>
     <h2>Предпочтения: {{ preferences }}</h2>
     <button onclick="document.location.href='/profile_edit'">Редактирование</button>
     <button onclick="document.location.href='/main'">Назад</button>
