--- a/static/styles/profile.css
+++ b/static/styles/profile.css
@@ -57,7 +57,7 @@ main {
     flex-direction: column;
 }
 
-.scrollable-container label {
+.list-top-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -81,8 +81,8 @@ main {
     align-items: center;
     height: 2.2rem;
     margin: 4px 0;
-    padding: 4px 12px;
-    padding-right: 6px;
+    padding: 2px 12px;
+    padding-right: 4px;
     font-size: 1.4rem;
     border-radius: var(--border-radius);
 }
@@ -92,9 +92,39 @@ main {
     box-shadow: var(--shadow-small);
 }
 
-.add-btn {
+li.new-list-item {
+    padding-left: 4px;
+    background: var(--bg-light);
+    box-shadow: var(--shadow-small);
+}
+
+.new-list-item input {
+    font-size: 1.1rem;
+}
+
+.add-item-btn {
+    position: relative;
     aspect-ratio: 1/1;
-    height: 2.5rem;
-    width: 2.5rem;
-    font-size: 1.7rem;
+    padding: 16px;
+}
+
+.add-item-btn:after, .add-item-btn:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background: var(--text);
+    transform: translate(-50%, -50%);
+    border-radius: 100px;
+}
+
+.add-item-btn:before{
+    width: 0.18rem;
+    height: 1.1rem;
+
+}
+
+.add-item-btn:after{
+    width: 1.1rem;
+    height: 0.18rem;
 }
