--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -10,7 +10,7 @@
     --text-muted: hsl(0, 0%, 40%);
     --text-light: hsl(0, 0%, 100%);
     --shadow: 0px 4px 8px hsla(0, 0%, 0%, 0.15);
-    --shadow-small: 0px 2px 4px hsla(0, 0%, 0%, 0.075);
+    --shadow-small: 0px 2px 4px hsla(0, 0%, 0%, 0.1);
     --border-color: hsl(0, 0%, 80%);
     --border-radius: 16px;
     --border-radius-small: 12px;
@@ -36,23 +36,26 @@ input {
     color: inherit;
     box-shadow: var(--shadow-small);
     outline: none;
-}
 
-input:focus {
-    border: 2px solid var(--primary);
-}
 
-input:read-only, input:read-only:focus {
-    caret-color: transparent;
-    background: none;
-    border: none;
-    box-shadow: none;
+    &:focus {
+        border: 2px solid var(--primary);
+    }
+    
+    &:read-only, &:read-only:focus {
+        caret-color: transparent;
+        background: none;
+        border: none;
+        box-shadow: none;
+    }
+
 }
 
 button {
     --hover: var(--bg);
     padding: 8px 12px;
     color: inherit;
+    font-size: inherit;
     font-family: inherit;
     font-weight: 600;
     border: 0;
@@ -119,36 +122,7 @@ select:focus {
     border: 2px solid var(--primary);
 }
 
-#title {
-    text-align: center;
-    font-size: 2rem;
-    font-weight: 600;
 
-    &.left {
-        text-align: left;
-    }
-
-    &.right {
-        text-align: right;
-    }
-}
-
-.labeled-input {
-    display: flex;
-    flex-direction: column;
-    gap: 3px;
-}
-
-.labeled-input label {
-    margin-left: 8px;
-    font-size: 1.1rem;
-}
-
-.labeled-input input {
-    font-size: 1.4rem;
-}
-
-.labeled-input input:read-only {
-    padding: 0;
-    padding-left: 8px;
+a {
+    color: var(--primary);
 }
