--- a/static/styles/profile-popup.css
+++ b/static/styles/profile-popup.css
@@ -1,7 +1,7 @@
 #profile-popup {
     visibility: hidden;
     position: absolute;
-    padding: 16px 24px;
+    padding: 12px 20px;
     margin-top: 8px;
     right: 8px;
     z-index: 1000;
@@ -18,11 +18,12 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
+    font-weight: 500;
 }
 
 #profile-popup a {
-    color: black;
+    color: var(--text);
     text-decoration: none;
 }
 
