--- a/templates/header.html
+++ b/templates/header.html
@@ -8,9 +8,9 @@
     <div id="right-header">
         {% if not is_not_authenticated %}
         <nav id="app-menu">
-            <button onclick="window.location.href = '/menu'">Меню</button>
-            <button onclick="window.location.href = '/payment'">Оплата</button>
-            <button onclick="window.location.href = '/receiving'">Получение</button>
+            <a href="/menu">Меню</a>
+            <a href="/payment">Оплата</a>
+            <a href="/receiving">Получение</a>
             <button id="profile-btn">{{ surname }} {{ name[0] }}.</button>
         </nav>
         {% endif %}
